# LensForge

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  run_lsst_mock_pipeline.py  train.py  train_common_test_i.py  train_common_test_i_fft.py  train_common_test_i_hog.py  train_common_test_i_radial.py  train_test_iv_neural_operator.py
.github/workflows/: ci.yml
docs/: gsoc26_evaluation_checklist.md  lsst_pipeline_design.md  rubin_access_setup.md  source_synthesis.md  submission_notes.md
models/: best_current_run.pt  common_test_i_polar_9010_noaug_long.pt  common_test_i_polar_9010_noaug_w32.pt
output/jupyter-notebook/: common-test-i-multiclass.ipynb  deeplense-test-v-baseline.ipynb  lsst-mock-pipeline.ipynb  rubin-dp02-access.ipynb  (+1 more)
reports/: LENSFORGE_REPORT.md  best_current_run.json  common_test_i_experiments.json  common_test_i_experiments.md  common_test_i_experiments_compact.json  common_test_i_experiments_compact.md  common_test_i_fft.json  common_test_i_hog.json  common_test_i_polar.json  common_test_i_polar_9010.json  common_test_i_polar_9010_noaug.json  common_test_i_polar_9010_noaug_long.json  common_test_i_polar_9010_noaug_w32.json  common_test_i_summary.md  error_summary.json  error_summary.md  focal_loss_summary.json  focal_loss_summary.md  lsst_mock_pipeline_run.json  lsst_mock_pipeline_summary.md  lsst_pipeline_smoke.json  strategy_summary.md  test_iv_spectral.json
src/: common_test_i.py  lens_finding_baseline.py
tests/: test_submission_artifacts.py
(+7 files in other folders)
