[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lensforge"
version = "0.1.0"
description = "LensForge: GSoC 2026 DeepLense evaluation submission for lens finding and LSST-style data pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Atharva" }
]
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
